k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-restart
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-restart
  template:
    metadata:
      labels:
        app: k8s-restart
    spec:
      containers:
      - name: k8s-restart
        image: ghcr.io/gitopsmanager/k8s-restart:latest
        ports:
        - containerPort: 80
