k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-restart
  namespace: kube-system
spec:
  selector:
    app: k8s-restart
  ports:
  - port: 80
    targetPort: 80
